Update GameLogic.java - changed wrapping methods